infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: partpal
  labels:
    name: partpal
    app.kubernetes.io/name: partpal
    app.kubernetes.io/instance: production
